--- a/sirajkhalid_wb/Config/DefaultEngine.ini
+++ b/sirajkhalid_wb/Config/DefaultEngine.ini
@@ -74,8 +74,8 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/TestLevel.TestLevel
-GameDefaultMap=/Game/Levels/TestLevel.TestLevel
+EditorStartupMap=/Game/Levels/StartMenuLevel.StartMenuLevel
+GameDefaultMap=/Game/Levels/StartMenuLevel.StartMenuLevel
 
 [ConsoleVariables]
 fx.Niagara.ForceLastTickGroup=1
